--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <!-- header banner -->
+        <div class="container">
+            <div class="banner">
+                    <h1>All Thinks Are Possible If You believe</h1>
+                    <p class="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>    
+            </div>
+            <div class="button">
+                <button class="contact">Contact Us</button>
+            </div>
+        </div>
+    </header>
+    <!--failures -->
+    <main>
+        <section class="my-failure"> 
+           <div class="section-texts"><h3>My failures of previous year</h3>
+            <p class="text-part">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
+         <div class="text-list">
+            <ul><li>Contrary to popular belief, is not simply.</li>
+            <li>Contrary to popular belief.</li>
+            <li>Contrary to popular,is not simply.</li>
+            <li>Contrary to popular belief, is not simply.</li>
+            <li>Contrary to popular simply.</li></ul>
+         </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
