--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
             <li>Contrary to popular simply.</li></ul>
          </div>
         </section>
+        <div class="section-title">
+            <h3>My Plans</h3></div>
+             <!-- my plan section -->
+        <section class="my-plans">
+        <div class="plan-contents">
+            <div class="plans">
+                <img src="images/icons/web.png" alt="">
+                <h3>Web Development</h3>
+                <p>I want to start</p></div>
+            <div class="plans">
+                <img src="images/icons/js.png" alt="">
+                <h3>Javascript</h3>
+                <p>I want to learn</p></div>
+            <div class="plans">
+                <img src="images/icons/smoke.png" alt="">
+                <h3>Smoking Habit</h3>
+                <p>I want to end</p></div>
+            <div class="plans">
+                <img src="images/icons/ecom.png" alt="">
+                <h3>Ecommerce</h3>
+                <p>I want to develop</p></div>
+           </div>
+        </section>
 
     </main>
     <footer>
