added the gradient part

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
                 <h3>Ecommerce</h3>
                 <p>I want to develop</p></div>
            </div>
+           <div class="gradient-part">
+            <h1 class="title">Always keep a positive mindset</h1>
+           <button class="call-now">Call Now</button></div>
         </section>
-
     </main>
     <footer>
 
