--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Contrary to popular belief.</li>
             <li>Contrary to popular,is not simply.</li>
             <li>Contrary to popular belief, is not simply.</li>
-            <li>Contrary to popular simply.</li></ul>
+            <li>Contrary to popular simply.</li></ul></div>
          </div>
         </section>
         <div class="section-title">
@@ -59,10 +59,56 @@
            <div class="gradient-part">
             <h1 class="title">Always keep a positive mindset</h1>
            <button class="call-now">Call Now</button></div>
+        
+         <div class="Hobby-section">
+            <div class="Hobby-title">
+                <h3>My Hobbies</h3></div>
+                 <!-- my hobby section -->
+            <section class="my-hobbies">
+            <div class="hobbies-contents">
+                <div class="hobbies">
+                    <img src="images/icons/bicycle.png" alt="" width="100px" height="100px">
+                    <h3>Cycling</h3>
+                    <p>I am very interested in cycling from childhood.</p></div>
+                <div class="hobbies">
+                    <img src="images/icons/movies.png" alt="" width="100px" height="100px">
+                    <h3>Watching Movies</h3>
+                    <p>When I get a break, I watch movies.</p></div>
+                <div class="hobbies">
+                    <img src="images/icons/bake.png" alt="" width="100px" height="100px">
+                    <h3>Baking and Cooking</h3>
+                    <p>Cooking something for family is a kind of happiness.</p></div>
+                <div class="hobbies">
+                    <img src="images/icons/tent.png" alt="" width="100px" height="100px">
+                    <h3>Tour</h3>
+                    <p>Tour with family is my passion. Great entertainment ever!</p></div>
+               </div>
         </section>
-    </main>
-    <footer>
+    </div>
+    <section class="contact-section">
+        <div class="future-details">
+            <h1 class="future">Future</h1>
+            <p class="details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="details">Email : info@gmail.com</p>
+            <p class="details">Phone : 01500 00 00 00</p>
+            <div class="details"><a href="">
+            <img src="images/icons/fb.png" alt=""> </a>
+            <a href="">
+                <img src="images/icons/twitter.png" alt=""></a>
+            <a href="">
+                <img src="images/icons/youtube.png" alt=""></a></div>
 
-    </footer>
+        </div>
+            <div class="subscribe">
+                <h3>Subscribe</h3>
+                <div>
+                <label class="btn-email">
+                    <input class="input" type="email" id="email" placeholder="Enter your email">
+                </label>
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+    </section>
+    </main>
+        
 </body>
 </html>
